--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dashscope>=1.25.5",
     "faiss-cpu>=1.13.1",
+    "jieba>=0.42.1",
     "langchain>=1.2.0",
     "langchain-community>=0.4.1",
     "langchain-deepseek>=1.0.1",
