--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "beautifulsoup4>=4.14.3",
     "black>=25.12.0",
     "dashscope>=1.25.5",
+    "docx2txt>=0.9",
     "faiss-cpu>=1.13.1",
     "jieba>=0.42.1",
     "langchain>=1.2.0",
@@ -14,7 +16,11 @@ dependencies = [
     "langchain-deepseek>=1.0.1",
     "langchain-huggingface>=1.2.0",
     "langchain-openai>=1.1.6",
+    "lxml>=6.0.2",
     "numpy>=2.3.5",
     "openai>=2.14.0",
+    "pypdf>=6.5.0",
+    "pypdf2>=3.0.1",
+    "python-docx>=1.2.0",
     "sentence-transformers>=5.2.0",
 ]
